wrap fix

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3750,7 +3750,7 @@ nav {
 	margin-bottom: 60px;
 
 	.has-top-menu & {
-		margin-top: 190px;
+		margin-top: 220px;
 	}
 
 	.header-expanded &,
